--- a/src/views/letterGuaranteeForm.ejs
+++ b/src/views/letterGuaranteeForm.ejs
@@ -83,9 +83,9 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="cedula_beneficiario_carta_aval"
-                                                id="cedula_beneficiario_carta_aval"
-                                                placeholder="Cédula del Beneficiario *"
+                                                name="cedula_beneficiario"
+                                                id="cedula_beneficiario"
+                                                placeholder="Cédula del Beneficiario (separa por ,)"
                                                 class="form-control"
                                                 required
                                             >
@@ -166,9 +166,9 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="nombre_beneficiario_carta_aval"
-                                                id="nombre_beneficiario_carta_aval"
-                                                placeholder="Nombre del Beneficiario *"
+                                                name="nombre_beneficiario"
+                                                id="nombre_beneficiario"
+                                                placeholder="Nombre del Beneficiario (separa por ,)"
                                                 class="form-control"
                                                 required
                                             >
