--- a/src/views/emergencyForm.ejs
+++ b/src/views/emergencyForm.ejs
@@ -12,7 +12,7 @@
                 <a>Reclamos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Agregar Emergenecia</strong>
+                <strong>Agregar Emergencia</strong>
             </li>
         </ol>
     </div>
@@ -83,9 +83,9 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="cedula_beneficiario_emergencia"
-                                                id="cedula_beneficiario_emergencia"
-                                                placeholder="Cédula del Beneficiario *"
+                                                name="cedula_beneficiario"
+                                                id="cedula_beneficiario"
+                                                placeholder="Cédula del Beneficiario (separa por ,)"
                                                 class="form-control"
                                                 required
                                             >
@@ -166,9 +166,9 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="nombre_beneficiario_emergencia"
-                                                id="nombre_beneficiario_emergencia"
-                                                placeholder="Nombre del Beneficiario *"
+                                                name="nombre_beneficiario"
+                                                id="nombre_beneficiario"
+                                                placeholder="Nombre del Beneficiario (separa por ,)"
                                                 class="form-control"
                                                 required
                                             >
