--- a/src/views/refundForm.ejs
+++ b/src/views/refundForm.ejs
@@ -83,11 +83,10 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="cedula_beneficiario_reembolso"
-                                                id="cedula_beneficiario_reembolso"
-                                                placeholder="Cédula del Beneficiario *"
+                                                name="cedula_beneficiario"
+                                                id="cedula_beneficiario"
+                                                placeholder="Cédula del Beneficiario (separa por ,)"
                                                 class="form-control"
-                                                required
                                             >
                                         </div>
                                     </div>
@@ -166,11 +165,10 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="nombre_beneficiario_reembolso"
-                                                id="nombre_beneficiario_reembolso"
-                                                placeholder="Nombre del Beneficiario *"
+                                                name="nombre_beneficiario"
+                                                id="nombre_beneficiario"
+                                                placeholder="Nombre del Beneficiario (separa por ,)"
                                                 class="form-control"
-                                                required
                                             >
                                         </div>
                                     </div>
@@ -178,8 +176,8 @@
                                         <div class="col-sm-10">
                                             <input 
                                                 type="hidden"
-                                                name=""
-                                                id=""
+                                                name="asegurado_id"
+                                                id="asegurado_id"
                                                 class="form-control"
                                             >
                                         </div>
