Arreglos en codigo en los modulos de index y reportes

--- a/src/views/commissionsCollected.ejs
+++ b/src/views/commissionsCollected.ejs
@@ -36,6 +36,8 @@
                             <th>Ejecutivo</th>
                             <th>Tipo Ramo</th>
                             <th>Aseguradora</th>
+                            <th>Fecha Desde</th>
+                            <th>Fecha Hasta</th>
                             <th>Comisión</th>
                         </tr>
                         </thead>
@@ -49,6 +51,8 @@
                             <th>Ejecutivo</th>
                             <th>Tipo Ramo</th>
                             <th>Aseguradora</th>
+                            <th>Fecha Desde</th>
+                            <th>Fecha Hasta</th>
                             <th>Comisión</th>
                         </tr>
                         </tfoot>
@@ -131,6 +135,8 @@ $(document).ready(function(){
             {"data": "executive"},
             {"data": "bouquetType"},
             {"data": "insurer"},
+            {"data": "dateFrom"},
+            {"data": "dateTo"},
             {"data": "commission"}
         ],
         buttons: [
