--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -117,10 +117,10 @@
         <h3>Número de Póliza por ramo:</h3>
         <ul class="list-group">
             <li class="list-group-item">
-                Salud: <%= healthPolicyCount.health %> 
+                Salud: <%= healthPolicyCount %> 
             </li>
             <li class="list-group-item">
-                Automovil: <%= autoPolicyCount.auto %>
+                Automovil: <%= autoPolicyCount %>
             </li>
             <li class="list-group-item">
                 Patrimoniales: <%= patrimonialPolicyCount.patrimonial %>
@@ -142,6 +142,9 @@
             </li>
             <li class="list-group-item">
                 Viaje: <%= travelPolicyCount.travel %>
+            </li>
+            <li class="list-group-item">
+                Riesgos Diversos: <%= RiskDiverCollectiveCount.risk %>
             </li>
         </ul>
     </div>
